change currency in profile

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -7,7 +7,7 @@
                         {% if performance.priceOnRequest %}
                             <div class="price pull-right">Price on request</div>
                         {% else %}
-                            <div class="price pull-right">Price: from {{ performance.minPrice|number_format(0) }} EUR</div> <!--<input class="set-price" type="text" placeholder="0,00">-->
+                            <div class="price pull-right">Price: from {{ performance.minPrice|number_format(0) }} GBP</div> <!--<input class="set-price" type="text" placeholder="0,00">-->
                         {% endif %}
                     </header>
 
