Resolve problem with 'Send Message' button on Enquiries page. 06/01/2017 10:17 AM

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -76,7 +76,7 @@
                         {% endif %}
 
                         <div class="button-gradient filled blue">
-                            <button type="button" class="btn register"><a href="/dashboard/chat/{{ order.chat.id }}">Send Message</a></button>
+                            <a href="/dashboard/chat/{{ order.chat.id }}" class="btn register">Send Message</a>
                         </div>
 
                         <div class="button-gradient orange">
@@ -146,9 +146,8 @@
                                     <button type="button" class="btn register quotationSendbtn" disabled>Send Quotation</button>
                                 </div>
 
-
                                 <div class="button-gradient filled blue">
-                                    <button type="button" class="btn register"><a href="/dashboard/chat/{{ order.chat_id }}">Send Message</a></button>
+                                    <a href="/dashboard/chat/{{ order.chat_id }}" class="btn register">Send Message</a>
                                 </div>
 
                                 <div class="button-gradient orange">
