--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/enquiries.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/enquiries.css
@@ -65,9 +65,10 @@
     width: 100%;
 }
 
-.act-request .controls > .button-gradient.filled>.btn {
-    font-size: 13px!important;
-    height: 26px!important;
+.act-request .controls > .button-gradient.filled > .btn {
+    font-size: 14px !important;
+    height: 26px !important;
+    line-height: 26px;
 }
 
 .act-request .controls > .button-gradient .btn {
