Resolve problem with search page 'Profile' button in Firefox. 06/01/2017 10:52 AM

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -259,13 +259,9 @@
 
                                     <div class="controls">
                                         <div class="button-gradient blue filled">
-
-                                            <button data-dismiss="modal" class="btn">
-                                                <a href="{{ path('profile_show', {'slug' : recomendedArtist.slug}) }}">
-                                                     Profile
-                                                </a>
-                                            </button>
-
+                                            <a href="{{ path('profile_show', {'slug' : recomendedArtist.slug}) }}" class="btn register">
+                                                 Profile
+                                            </a>
                                         </div>
 
                                         <div class="button-gradient blue ">
