--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -172,14 +172,19 @@
                             <p>Confirm the booking</p>
                         </div>
                         <div class="col-sm-6 col-xs-5 no-pad">
-                            <p class="booking-status">Status: <b>Confirmed</b></p>
+                            <p class="booking-status">Status: <b>{{ order.stringStatus }}</b></p>
                         </div>
                     </div>
                 </div>
                 <div class="row booking-confirm-container">
                     <div class="col-sm-6">
-                        <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
-                        <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} GBP unpaid</p>
+                        {% if order.status == 2 %}
+                            <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
+                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} GBP unpaid</p>
+                        {% else %}
+                        <p class="deposit-info"><b>Deposit:</b> {{ order.depositToPay }} GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
+                        <p class="deposit-info"><b>Balance:</b> {{ order.balanceToPay }} GBP will left to pay</p>
+                        {% endif %}
                     </div>
                     <div class="col-sm-6 booking-confirm-list no-pad">
                         <div class="pull-right">
