Performance additional info

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -135,7 +135,7 @@
                             <p>Additional info:</p>
                         </div>
                         <div class="col-md-9">
-                            <p>${order.event.comments}</p>
+                            <p>${order.additional_info}</p>
                         </div>
                     </div>
                 </div>
