--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -265,6 +265,14 @@
                                 {% set performanceClass = 'service' %}
                             {% endif %}
 
+                            {% set userColumnClass = 'col-md-6' %}
+                            {% set userAlignCurrencyClass = 'set-currency' %}
+
+                            {% if user.roles[0] == 'ROLE_ARTIST'%}
+                                {% set userColumnClass = 'col-md-12' %}
+                                {% set userAlignCurrencyClass = 'pull-right' %}
+                            {% endif %}
+
                             {% if p.data.type > 0 %}
                                 {% set performanceClass = 'service act-extras' %}
                             {% endif %}
@@ -277,17 +285,20 @@
                                             <strong class="sub-title">{{ package['name'] }}</strong>
                                             <div class="row">
                                                 {% for option in package['options'] %}
-                                                    <div class="col-md-6 no-pad currency-box">
-                                                        <div class="custom-checkbox">
-                                                            <input id="currency_checkbox_1" name="currency_checkbox_1" value="" type="checkbox" checked>
-                                                            <label for="currency_checkbox_1"></label>
-                                                        </div>
+
+                                                    <div class="{{ userColumnClass }} no-pad currency-box">
+                                                        {% if user.roles[0] == 'ROLE_CLIENT'%}
+                                                            <div class="custom-checkbox">
+                                                                <input id="currency_checkbox_1" name="currency_checkbox_1" value="" type="checkbox" checked>
+                                                                <label for="currency_checkbox_1"></label>
+                                                            </div>
+                                                        {% endif %}
                                                         {% if p.data.type < 2 %}
                                                             <span class="short" name="currency1" id="currency1">{{ option['qty'] }}</span>
                                                             <span class="">x</span>
                                                             <span class="short" name="currency11" id="currency11">{{ option['duration'] }} min</span>
                                                         {% endif %}
-                                                        <div class="set-currency">
+                                                        <div class="{{ userAlignCurrencyClass }}">
                                                             <span class="short">{{ option['rates'][0]["price"]['amount'] }}</span>
                                                             <span class="pull-right">GBP</span>
                                                         </div>
