--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -115,9 +115,12 @@
                         </div>
                     </div>
                     <div class="row" v-for="item in order.items">
-                        <div class="col-md-5">
+                        <div class="col-sm-12">
                             <p>${item.data.title}</p>
-                            <ul class="list-unstyled"><li v-for="package in item.data.packages">${package.name} <span v-for="option in package.options">&nbsp;${option.qty}x${option.duration} min&nbsp;<span v-for="rate in option.rates">£ ${rate.price.amount}</span></span></li></ul>
+                            <ul class="list-unstyled">
+                                <li v-for="package in item.data.packages">${package.name}<span v-for="option in package.options" class="event-details-set">${option.qty} x ${option.duration} min<span v-for="rate in option.rates" class="event-details-set-rate">£ ${rate.price.amount}</span></span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
