--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -24,7 +24,39 @@
         detailsAccepted: Boolean({{ order.detailsAccepted }}),
         status: {{ order.status }},
         eventStartTime: "{{ order.performanceStartTime }}"
-    }
+    };
+
+    window.orderOptions = [];
+    window.totalPrice = 0;
+
+    window.guaranteedDepositTerm = {{ order.guaranteedDepositTerm }}
+    window.guaranteedBalanceTerm = {{ order.guaranteedBalanceTerm }}
+
+    {% for orderOption in orderOptions %}
+        var currentOption = {
+            id: {{ orderOption.id }},
+            objId: "{{ orderOption.objId }}",
+            duration: {{ orderOption.duration }},
+            qty: {{ orderOption.qty }},
+            amount: {{ orderOption.amount }},
+            objectName: "{{ orderOption.objectName }}",
+            packageName: "{{ orderOption.packageName }}",
+            objectType: "{{ orderOption.objectType }}",
+            type: {{ orderOption.type }}
+        };
+
+
+        {% set clientSelect = 0 %}
+        {% if orderOption.clientSelect is defined %}
+            {% if orderOption.clientSelect == 'true' %}
+                window.totalPrice = window.totalPrice + currentOption.amount;
+                {% set clientSelect = 1 %}
+            {% endif %}
+        {% endif %}
+
+        currentOption.clientSelect = Boolean({{ clientSelect }});
+        window.orderOptions.push(currentOption);
+    {% endfor %}
 
     window.actorDetails = {
         'email': '{{ order.artist.user.email }}',
@@ -179,11 +211,13 @@
                 <div class="row booking-confirm-container">
                     <div class="col-sm-6">
                         {% if order.status == 2 %}
-                            <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
-                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} GBP unpaid</p>
+                            {#<p class="deposit-info"><b>Deposit:</b> ${ depositAmount } GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
+                            <p class="deposit-info"><b>Balance:</b> ${ depositBallance } GBP unpaid</p>#}
+                            <p class="deposit-info"><b>Deposit:</b> ${ depositToPay } GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
+                            <p class="deposit-info"><b>Balance:</b> ${ balanceToPay } GBP unpaid</p>
                         {% else %}
-                        <p class="deposit-info"><b>Deposit:</b> {{ order.depositToPay }} GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
-                        <p class="deposit-info"><b>Balance:</b> {{ order.balanceToPay }} GBP will left to pay</p>
+                        <p class="deposit-info"><b>Deposit:</b> ${ depositToPay } GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
+                        <p class="deposit-info"><b>Balance:</b> ${ balanceToPay } GBP will left to pay</p>
                         {% endif %}
                     </div>
                     <div class="col-sm-6 booking-confirm-list no-pad">
@@ -230,7 +264,7 @@
                 <div class="row text-center">
                     <div class="controls book-now-btn">
                         <div class="button-gradient filled orange">
-                            <button class="btn" type="submit" v-on:click="showConfirmModal" v-bind:disabled="bookingAllowed">Book now</button>
+                            <button class="btn" type="submit" v-on:click="showConfirmModal($event)" v-bind:disabled="bookingAllowed">Book now</button>
                         </div>
                     </div>
                 </div>
