--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -321,6 +321,53 @@
                             </article>
                         {% endfor %}
 
+
+                        {% for p in order.services %}
+
+                            {% set performanceClass = 'service' %}
+
+                            {% set userColumnClass = 'col-md-6 currency-box' %}
+                            {% set userAlignCurrencyClass = 'set-currency' %}
+
+                            {% if user.roles[0] == 'ROLE_ARTIST'%}
+                                {% set userColumnClass = 'col-md-12' %}
+                                {% set userAlignCurrencyClass = 'pull-right' %}
+                            {% endif %}
+
+                            <article class="{{ performanceClass }}">
+                                <h3 class="package-name">{{ p.data['title'] }}</h3>
+                                <ul class="">
+                                    {% for packageKey,package in p.data.packages %}
+                                        <li>
+                                            <strong class="sub-title">{{ package['name'] }}</strong>
+                                            <div class="row">
+                                                {% for key,option in package['options'] %}
+
+                                                    <div class="{{ userColumnClass }} no-pad">
+                                                        {% if user.roles[0] == 'ROLE_CLIENT'%}
+                                                            {% set optionChecked = '' %}
+                                                            {% if option.clientSelect is defined and option.clientSelect == "true" %}
+                                                                {% set optionChecked = 'checked' %}
+                                                            {% endif %}
+
+                                                            <div class="custom-checkbox">
+                                                                <input id="{{ option.objId }}" object-id="{{ p.data.objId }}" package-id="{{ package.objId }}" name="{{ option.objId }}" v-on:click="checkOption($event)" value="" type="checkbox" {{ optionChecked }}>
+                                                                <label for="{{ option.objId }}"></label>
+                                                            </div>
+                                                        {% endif %}
+                                                        <div class="{{ userAlignCurrencyClass }}">
+                                                            <span class="short">{{ option['rates'][0]["price"]['amount'] }}</span>
+                                                            <span class="pull-right">GBP</span>
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </article>
+                        {% endfor %}
+
                         {#<article class="service act-extras">
                             <h3 class="package-name">Extra - 1</h3>
                             <ul class="">
