--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -205,7 +205,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 pull-right col-custom-size">
                         <div class="frame">
                             <label for="performance">1 day/multiple days</label>
-                            <input id="performance" disabled type="text" class="custom-size" placeholder="2-day event" value="2-day event">
+                            <input id="performance" disabled type="text" class="custom-size" placeholder="2-day event" value="{{ order.event.countDays }}-day event">
                         </div>
                         <div class="frame">
                             <label for="country">Country</label>
@@ -229,7 +229,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 pull-right col-custom-size">
                         <div class="frame">
                             <label for="guests_count">Number of guests</label>
-                            <input id="guests_count" disabled type="text" class="custom-size" placeholder="{{ order.event.numberOfGuests }}" value="{{ order.event.numberOfGuests }}">
+                            <input id="guests_count" disabled type="text" class="custom-size" placeholder="{{ order.event.numberOfGuests }}" value="{{ order.event.numberOfGuests|replace({"_": " "}) }}">
                         </div>
                     </div>
                 </div>
