fix - change non checked refaundable

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -242,7 +242,7 @@
         </select>
         <span>guaranteed Deposit payment on <b>Escrow Account</b></span>
         <div class="custom-checkbox">
-            <input id="non-refund" name="non-refund" type="checkbox" checked>
+            <input id="non-refund" name="non-refund" type="checkbox">
             <label for="non-refund">Non - refundable</label>
         </div>
     </div>
